// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a list of swatches 1`] = `
<div
  className="css-w1azp9"
>
  <div
    className="css-14g5nes"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="swatch"
    tabIndex={0}
    title="red"
  />
  <div
    className="css-pa4qu5"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="swatch"
    tabIndex={0}
    title="blue"
  />
  <div
    className="css-8tbn6u"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="swatch"
    tabIndex={0}
    title="purple"
  />
  <div
    className="css-1o54mkk"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="swatch"
    tabIndex={0}
    title="green"
  />
  <div
    className="css-18dp5ae"
    onClick={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseOver={[Function]}
    role="swatch"
    tabIndex={0}
    title="brown"
  />
</div>
`;

exports[`should render advanced color tools 1`] = `
Array [
  <span
    className="css-1v5ga19"
    title="color brightener"
  >
    <i
      className="fas fa-sun css-1makrmg"
      color="#eeee"
    />
    <input
      className="css-qvm90c"
      max="100"
      min="10"
      onChange={[Function]}
      type="range"
      value={0}
    />
    <label
      className="css-142tcgl"
      color="#eeee"
    >
      0
    </label>
  </span>,
  <span
    className="css-1v5ga19"
    title="color darkener"
  >
    <i
      className="fas fa-moon css-1makrmg"
      color="#eeee"
    />
    <input
      className="css-qvm90c"
      max="100"
      min="10"
      onChange={[Function]}
      type="range"
      value={20}
    />
    <label
      className="css-142tcgl"
      color="#eeee"
    >
      20
    </label>
  </span>,
  <span
    className="css-1v5ga19"
    title="color desaturator"
  >
    <i
      className="fas fa-fill css-1makrmg"
      color="#eeee"
    />
    <input
      className="css-qvm90c"
      max="100"
      min="10"
      onChange={[Function]}
      type="range"
      value={50}
    />
    <label
      className="css-142tcgl"
      color="#eeee"
    >
      50
    </label>
  </span>,
  <span
    className="css-1v5ga19"
    title="color saturator"
  >
    <i
      className="fas fa-star-half-alt css-1makrmg"
      color="#eeee"
    />
    <input
      className="css-qvm90c"
      max="100"
      min="10"
      onChange={[Function]}
      type="range"
      value={20}
    />
    <label
      className="css-142tcgl"
      color="#eeee"
    >
      20
    </label>
  </span>,
  <span
    className="css-1v5ga19"
    title="color spin"
  >
    <i
      className="fas fa-sync-alt css-1makrmg"
      color="#eeee"
    />
    <input
      className="css-qvm90c"
      max="360"
      min="-360"
      onChange={[Function]}
      type="range"
      value={-120}
    />
    <label
      className="css-142tcgl"
      color="#eeee"
    >
      -120
      <sup>
        °
      </sup>
    </label>
  </span>,
]
`;

exports[`should render basic color tools 1`] = `
Array [
  <span
    className="css-1v5ga19"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    title="tint picker"
  >
    <i
      className="fas fa-tint css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
  <span
    className="css-1v5ga19"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    title="shade picker"
  >
    <i
      className="fas fa-adjust css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
  <span
    className="css-1v5ga19"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    title="Palette generator"
  >
    <i
      className="fas fa-palette css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
  <span
    className="css-1v5ga19"
    title="Image picker"
  >
    <input
      accept="image/*"
      id="uploader"
      onChange={[Function]}
      style={
        Object {
          "display": "none",
        }
      }
      type="file"
    />
    <i
      className="fas fa-image css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
  <span
    className="css-1v5ga19"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
    title="reset colors"
  >
    <i
      className="fas fa-arrow-alt-circle-left css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
  <span
    aria-label="Copied"
    className="no-tooltip css-1v5ga19"
    id="clipboard"
    onClick={[Function]}
    onKeyDown={[Function]}
    tabIndex={0}
  >
    <i
      className="fas fa-copy css-iprkew"
      color="#f00"
      id="image-icon"
    />
  </span>,
]
`;

exports[`should render the color block with a color code and children 1`] = `
<div
  className="css-3ef40x"
  style={
    Object {
      "background": "#f00",
    }
  }
>
  <div
    className="css-1uaa0vj"
    style={
      Object {
        "color": "#fff",
      }
    }
  >
    #f00
  </div>
</div>
`;

exports[`should render the color block with hex color when the current format is HSV 1`] = `
<div
  className="css-3ef40x"
  style={
    Object {
      "background": "#ff0000",
    }
  }
>
  <div
    className="css-1uaa0vj"
    style={
      Object {
        "color": "#fff",
      }
    }
  >
    #f00
  </div>
</div>
`;
